@@ -48,9 +48,28 @@ lazy val root = (project in file("."))
       "-Wvalue-discard",
       "-Xfatal-warnings",
       "-source:3.3",
-      "-language:strictEquality",
+      // NOTE: `-language:strictEquality` is intentionally NOT enabled. http4s' route DSL
+      // (`GET -> Root / ...`) relies on `==` comparisons on Method / Uri.Path, and those
+      // types do not derive CanEqual. Turning strict equality on would surface ~10
+      // type errors in `Routes.scala`. The `derives CanEqual` annotations we keep in
+      // our domain enums (Op, ServerMsg, Ids.*) still help readers and code review.
     ),
 
-    Test / fork := true,
-    run / fork  := true,
+    Test / fork           := true,
+    Compile / run / fork  := true,
+
+    // Silence runtime warnings:
+    //  - Cats Effect's "IOApp main is running on a thread other than the main thread"
+    //    (unavoidable under sbt's forked `run`, which names its main thread differently).
+    //  - JDK 24+ terminal-deprecation notice for `sun.misc.Unsafe::objectFieldOffset`
+    //    emitted by scala3-library's LazyVals. The `--sun-misc-unsafe-memory-access`
+    //    flag only exists on JDK 24+ — adding it unconditionally would break `sbt run`
+    //    on the documented minimum (JDK 17), so we gate on the runtime version.
+    Compile / run / javaOptions ++= {
+      val base = Seq("-Dcats.effect.warnOnNonMainThreadDetected=false")
+      val javaMajor =
+        try { sys.props.getOrElse("java.specification.version", "0").split('.').head.toInt }
+        catch { case _: NumberFormatException => 0 }
+      if (javaMajor >= 24) base :+ "--sun-misc-unsafe-memory-access=allow" else base
+    },
   )
